--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "AppId": "",
     "AppSecret": "",
     "PlaceCallEndpointUrl": "https://graph.microsoft.com/v1.0",
-    "BotBaseUrl": "https://d297e87e6bde.ngrok.io",
+    "BotBaseUrl": "https://<subdomain>.ngrok.io",
     "GraphApiResourceUrl": "https://graph.microsoft.com",
     "MicrosoftLoginUrl": "https://login.microsoftonline.com/"
   }
