--- a/CallingMeetingBot.csproj
+++ b/CallingMeetingBot.csproj
@@ -8,7 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.1" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.12.2" />
-    <PackageReference Include="Microsoft.Graph.Auth" Version="1.0.0-preview.7" />
+    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.1702" />
     <PackageReference Include="Microsoft.Graph.Communications.Client" Version="1.2.0.1702" />
     <PackageReference Include="Microsoft.Graph.Communications.Common" Version="1.2.0.1702" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.30.0" />
@@ -24,6 +24,7 @@
 
     <ItemGroup>
       <Folder Include="Manifest\" />
+      <Folder Include="Images\" />
     </ItemGroup>
 
 </Project>
